css/main.css
/*
Azul color: #87CEFA; - COR BASE - USADO EM TODO O LAYOUT
[ANIMAÇÕES] - USAR SOMENTE EM ACTIVE/FOCUS/HOVER
[TONS CLAROS] Azul color-1: #96D4FB; | Azul color-2: #A5DAFB; | Azul color-3: #B4E0FC; |
[TONS ESCUROS] Azul color+1: #59BBF8; | Azul color+2: #2BA8F6; | Azul color+3: #0A92E7;

Rosa color: #FFC0CB;  - COR BASE - USADO EM TODO O LAYOUT
[ANIMAÇÕES] - USAR SOMENTE EM ACTIVE/FOCUS/HOVER
[TONS CLAROS] Rosa color-1: #FFC8D2; | Rosa color-2: #FFD0D8; | Rosa color-3: #FFD8DF;
[TONS ESCUROS] Rosa color+1: #FF889D; | Rosa color+2: #FF506F; | Rosa color+3: #FF1841;

Preto color: #27282b; |
Branco color: #F9F9F9; |
Branco color: #FFFFFF

Fontes usadas no site
font-family: 'PT Sans', sans-serif;
font-family: 'PT Sans Caption', sans-serif;
*/

body {
	font-family: 'PT Sans', sans-serif;
	color: #27282b;
}

h1{
	color: #87CEFA;
}

/**********************************
* MENU @arbolitoloco
**********************************/
nav {
	padding: 0 1em 0 1em;
	font-size: 16px;
	font-weight: bold;
	height: 110px;
	color:#27282b;
}

nav ul {
	list-style: none;
	margin:5px
	float: right;
}

nav li {
  	padding: 1em;
  	display: inline-block;
  	text-align: center;
}

nav a:hover{
	text-decoration: none;
	color:#27282b;
}
nav a:visited{
	text-decoration: none;
	color:#27282b;
}

.navbar-header {
	padding: 1em;
}

#navbar-container {
	margin: 0 50px 0 50px;
}

.navbar-toggle {
   border: none;
   padding: 1.5em;
}

.navbar-fixed-top {
  background-color: #ffffff;
  border-top: 10px solid #87CEFA;
  border-bottom: 10px solid #ffc0cb;
}

/**********************************
* PRIMEIRA SEÇÃO @gionaufal
**********************************/

#home {
	margin-top: 90px;
  	padding:40px;
	color: #fff;
	background-color: gray;
	height: 480px;
	border-bottom: 10px solid #87CEFA;
  	background: url(http://i.imgur.com/0YgkV7X.png) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

#home h1 {
	font-family: 'PT Sans Caption', sans-serif;
	font-weight: bold;
	color: #87CEFA;
}

#home h5{
	font-weight: bold;
}

#home p{
	width: 50%;
	padding: 5px;
	border-left: 5px solid white;
}

#saiba-mais{
	color: #fff;
	background-color:transparent;
	border: 1px solid white;
	width: 150px;
	font-size: 130%;
}

#saiba-mais:hover{
	color:#ffc0cb;
}

#saiba-mais:focus{
	color:#87CEFA;
}


/**********************************
* SEGUNDA SEÇÃO - SOBRE @gionaufal
 **********************************/
#sobre{
	border-bottom: 10px solid #87CEFA;
	padding:40px;
}

#sobre .img-responsive{
	margin: 0 auto;
	padding-bottom: 20px;
}

#sobre h2{
	font-weight: bold;
	font-size: 26px;
}

#sobre p{
	padding: 10px;
	border-left: 5px solid #87CEFA;
}

.btn-paypal {
	width: 60%;
	margin: 0 auto;
	background-color: #27282b;
	color: #F9F9F9;
	margin-top:10px;
	margin-bottom:10px;
}

/**********************************
* Colabs de @pedroleone / @gabirobs / @frenktico
**********************************/
.modal {
	overflow: auto;
	color: #333;
}
#gallery {
	margin: 20px;
}

#gallery img {
    border-radius: 50%;
    border-width: 5px;
    border-color: #87CEFA; 
    border-style: solid;
}

#gallery a:nth-of-type(odd) img {
    border-color: #ffc0cb;
}

#imagens{
	padding-top: 50px;
	padding-bottom: 60px;
}

#imagens h3{
	font-weight: bold;
	font-size: 26px;
}

/**********************************
* QUARTA SEÇÃO - FALE CONOSCO @brunoluizgr
**********************************/
#contato{
	border-top: 10px solid #FFC0CB;
	padding: 2.5rem 3%;
}
#contato .row h4{
	font-size: 2.5rem;
	font-family: 'PT Sans', sans-serif;
	font-weight: bolder;
}
#contato .row p{
	margin-top: 2.5rem;
	font-size: 1.4rem;
}
#contato .row input,
#contato .row textarea{
	color: #27282b;
	background-color: #F9F9F9;
	border-radius: 0;
	border: 0;
	border-left: 8px solid #FFC0CB;
	resize: none;
	overflow-y: scroll;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	-ms-box-shadow: none;
	-o-box-shadow: none;
	box-shadow: none;
}
#contato ::-webkit-input-placeholder{
	color: #27282b;
	font-weight: normal;
	font-size: 1.4rem;
}
#contato :-moz-placeholder{
	color: #27282b;
	font-weight: normal;
	font-size: 1.4rem;
}
#contato ::-moz-placeholder{
	color: #27282b;
	font-weight: normal;
	font-size: 1.4rem;
}
#contato :-ms-input-placeholder{
	color: #27282b;
	font-weight: normal;
	font-size: 1.4rem;
}
#contato .row .btn-enviar{
	color: #FFFFFF;
	background-color: #FFC0CB;
	font-weight: bolder;
	font-size: 1.6rem;
	border-radius: 0;
}
#contato .row .btn-enviar:active{
	background-color: #FF506F;
	transition: background-color 0.3s ease;
	-webkit-transition: background-color 0.3s ease;
	-moz-transition: background-color 0.3s ease;
	-ms-transition: background-color 0.3s ease;
   -o-transition: background-color 0.3s ease;
 }
 #contato .row .btn-enviar:focus,
 #contato .row .btn-enviar:hover{
 	background-color: #FF889D;
 	transition: background-color 0.3s ease;
 	-webkit-transition: background-color 0.3s ease;
 	-moz-transition: background-color 0.3s ease;
 	-ms-transition: background-color 0.3s ease;
 	-o-transition: background-color 0.3s ease;
 }
 /**********************************
 * QUINTA SEÇÃO - RODAPÉ @brunoluizgr
 **********************************/
 footer{
 	color:#FFFFFF;
 	background-color:#27282A;
 	padding: 2.5rem 3%;
 }
 footer .rosa-bg{
 	color:#FFC0CB;
 }
 footer a{
 	color:#FFFFFF;
 }
 footer a:active,
 footer a:focus,
 footer a:hover{
 	color:#FFFFFF;
 	text-decoration: none;
 }
 footer a:hover span i.rosa-bg{
 	color:#FF889D;
 	transition: color 0.3s ease;
 	-webkit-transition: color 0.3s ease;
    -moz-transition: color 0.3s ease;
 	-ms-transition: color 0.3s ease;
    -o-transition: color 0.3s ease;
 }
 footer p a span:nth-child(2){
 	line-height: 3rem;
 }
 /**********************************
 * MEDIA QUERIES AJUSTES - Retirado de https://scotch.io/tutorials/default-sizes-for-twitter-bootstraps-media-queries @brunoluizgr
 **********************************/
 /*==========  Método Non-Mobile   ==========*/
 /* Mega-Large-Devices++ */
 @media only screen and (min-width : 1201px) {
 	#contato{
 		height: 100vh;
 	}
 	#contato .row{
 		padding-top: 10vh;
 	}
 	#contato .row textarea{
 		height: 200px;
 	}
 }
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
 	#contato{
 		height: 100vh;
	}
 	#contato .row{
 		padding-top: 10vh;
	}
 	#contato .row textarea{
 		height: 180px;
 	}
 }
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
 	#contato{
 		height: 100vh;
 	}
 	#contato .row{
 		padding-top: 5vh;
 	}
 	#contato .row textarea{
 		height: 70px;
 	}
 }
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {

nav li {
 		padding: 1.7em;
 	}

 	#contato{
 		height: 100vh;
 	}
 	#contato .row{
 		padding-top: 2vh;
 	}
 	#contato .row textarea{
 		height: 85px;
   	}
}

 /* Extra Small Devices, Phones */
	 nav ul {
	  	width: 50vw;
	  	height: 80vw;
	  	float: right;
	 }
	 
	 nav li {
	  	background-color: #ffffff;
	 	padding: 1em;
 }

 @media only screen and (max-width : 480px) {
 	#contato{
 		height: 700px;
 	}
	#contato .row{
 		padding-top: 1.5vh;
 }
 	#contato .row textarea{
 		height: 130px;
 	}
 }
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px) {
 	#contato{
 		height: 750px;
 	}
 	#contato .row{
 		padding-top: 1vh;
 	}
 	#contato .row textarea{
 		height: 150px;
 	}
 }

